resize brand logo so fits for all screen sizes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,3 +2,10 @@
     font-size: .75em;
     color: grey;
 }
+
+@media only screen and (max-width: 640px) {
+    #brand-name {
+      font-size: 1.4em;
+      left: 43%;
+    }
+  }
